bottom text cut off fixed

--- a/assets/css/lista.css
+++ b/assets/css/lista.css
@@ -38,6 +38,8 @@
     height: auto;
 
     overflow: hidden;
+
+    line-height: normal;
 }
 
 .lista__item--complete{
